--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 </head>
 <body>
   <h1>横茶横葉のサイト(現在製作中)</h1>
-  <p>アプリ倉庫は↓コチラです!</p>
 
-  <a href="https://sites.google.com/view/ask-apps-site/">コチラからどうぞ~</a>
    <p>メインサイト(Googleサイト版)は↓コチラです!</p>
 
-  <a href="https://sites.google.com/view/yokokiri/">コチラからどうぞ~</a>
+  <a href="https://sites.google.com/view/yokochayokoha/">コチラからどうぞ~</a>
+    <p>Cafeアプリストアは↓コチラです!</p>
+
+  <a href="https://sites.google.com/view/yokocafe/">コチラからどうぞ~</a>
+  
 </body>
 </html>
