--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="refresh" content="0;URL=https://sites.google.com/view/yokochayokoha">
-<title>Redirecct</title>
+<title>メインサイトはこちら!</title>
 </head>
 <body>
 <h1>移動処理中です</h1>
