--- a/fastportal.html
+++ b/fastportal.html
@@ -29,6 +29,6 @@
        <p>横茶横葉メインサイト(最軽量GitHub pages版)↓</p>
 
   <a href="https://yokochayokoha.github.io">横茶横葉メインサイト</a>
-  <p><em>©YokochaYokoha (YouTubeはGoogleLLCの商標又は登録商標です。</em></p>
+  <p><em>©YokochaYokoha (YouTubeはGoogleLLCの商標又は登録商標です。)</em></p>
 </body>
 </html>
