--- a/fastportal.html
+++ b/fastportal.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Fastポータル</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Fastポータル(最軽量汎用ポータルサイト!)</title>
   <meta charset="UTF-8">
 </head>
 <body>
