--- a/fastportal.html
+++ b/fastportal.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Fastポータル(最軽量汎用ポータルサイト!)</title>
+  <title>Fastポータル(最軽量汎用ポータルサイト)</title>
   <meta charset="UTF-8">
 </head>
 <body>
@@ -22,14 +22,15 @@
           <p>ニコニコ動画メインページ↓</p>
 
   <a href="https://nicovideo.jp">ニコニコ動画</a>
+  <h1>About YokochaYokoha</h1>
   
      <p>横茶横葉メインサイト(Googleサイト版)↓</p>
 
   <a href="https://sites.google.com/view/yokochayokoha/">横茶横葉メインサイト</a>
   
-       <p>横茶横葉メインサイト(最軽量GitHub pages版)↓</p>
+       <p>横茶横葉メインサイト(製作中)↓</p>
 
   <a href="https://yokochayokoha.github.io">横茶横葉メインサイト</a>
-  <p><em>©YokochaYokoha (YouTubeはGoogleLLCの商標又は登録商標です。)</em></p>
+  <p><em>©YokochaYokoha All Rights Reserved. (YouTubeはGoogleLLCの商標又は登録商標です。)</em></p>
 </body>
 </html>
