--- a/fastportal.html
+++ b/fastportal.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1><font size="5">FastPortal-The fastest portal site by YokochaYokoha</font></h1>
+  <p>動作が遅い端末のブラウザーのホームページなどにどうぞ!</p>
 
 
     <p>Google検索↓</p>
