--- a/fastportal.html
+++ b/fastportal.html
@@ -23,7 +23,7 @@
           <p>ニコニコ動画メインページ↓</p>
 
   <a href="https://nicovideo.jp">ニコニコ動画</a>
-  <h1>About YokochaYokoha</h1>
+  <p>//About YokochaYokoha//</p>
   
      <p>横茶横葉メインサイト(Googleサイト版)↓</p>
 
@@ -32,6 +32,6 @@
        <p>横茶横葉メインサイト(製作中)↓</p>
 
   <a href="https://yokochayokoha.github.io">横茶横葉メインサイト</a>
-  <p><em>©YokochaYokoha All Rights Reserved. (YouTubeはGoogleLLCの商標又は登録商標です。)</em></p>
+  <p><em>©YokochaYokoha All Rights Reserved. </em>(YouTubeはGoogleLLCの商標又は登録商標です。)</p>
 </body>
 </html>
