--- a/fastportal.html
+++ b/fastportal.html
@@ -32,6 +32,6 @@
        <p>横茶横葉メインサイト(製作中)↓</p>
 
   <a href="https://yokochayokoha.github.io">横茶横葉メインサイト</a>
-  <p><em>©YokochaYokoha All Rights Reserved. </em>(YouTubeはGoogleLLCの商標又は登録商標です。)</p>
+  <p>©2023YokochaYokoha All Rights Reserved. (YouTubeはGoogleLLCの商標又は登録商標です。)</p>
 </body>
 </html>
