--- a/fastportal.html
+++ b/fastportal.html
@@ -16,6 +16,9 @@
       <p>DuckDuckGo検索↓</p>
 
   <a href="https://duckduckgo.com">DuckDuckGO</a>
+   <p>Microsoft Bing検索↓</p>
+
+  <a href="https://www.bing.com">Google</a>
         <p>YouTubeメインページ↓</p>
 
   <a href="https://www.youtube.com">YouTube</a>
