--- a/fastportal.html
+++ b/fastportal.html
@@ -18,7 +18,7 @@
   <a href="https://duckduckgo.com">DuckDuckGO</a>
    <p>Microsoft Bing検索↓</p>
 
-  <a href="https://www.bing.com">Google</a>
+  <a href="https://www.bing.com">Microsoft Bing</a>
         <p>YouTubeメインページ↓</p>
 
   <a href="https://www.youtube.com">YouTube</a>
