--- a/fastportal.html
+++ b/fastportal.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  <h1><font size="5">FastPortal-The fastest portal site by YokochaYokoha</font></h1>
-  <p>動作が遅い端末のブラウザーのホームページなどにどうぞ!</p>
+  <h1><font size="5">FastPortal-A fast portal site</font></h1>
+  <p>動作が遅い端末のブラウザーのスタートページに!</p>
 
 
     <p>Google検索↓</p>
