--- a/time.html
+++ b/time.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <script src = timenow.js></script>
+  <script src = "timenow.js"></script>
 <head>
   <title>JS現在時刻by横茶横葉</title>
   <meta charset="UTF-8">
