--- a/time.html
+++ b/time.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
 </head>
 <body>
-<p id="RealtimeClockArea2">Please wait a moment...</p>
+<p id="clockvalue">Please wait a moment...</p>
 
  
   
