--- a/time.html
+++ b/time.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <script src = "timenow.js"></script>
+
 <head>
   <title>JS現在時刻by横茶横葉</title>
   <meta charset="UTF-8">
@@ -8,7 +8,7 @@
 <body>
 <p id="Clockvalue">Please wait a moment...</p>
 
- 
+   <script src = "./timenow.js"></script>
   
 </body>
 </html>
