--- a/time.html
+++ b/time.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
 </head>
 <body>
-<p id="Clockvalue">Please wait a moment...</p>
+<h2 id="Clockvalue">Please wait a moment...</h2>
 
    <script src = "./timenow.js"></script>
   
