--- a/time.html
+++ b/time.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 <head>
   <title>JS現在時刻by横茶横葉</title>
   <meta charset="UTF-8">
