--- a/time.html
+++ b/time.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
 </head>
 <body>
-<h2 id="Clockvalue"><font size=7>Please wait a moment...</font></h2>
+<font size=7><h2 id="Clockvalue">Please wait a moment...</h2></font>
 
    <script src = "./timenow.js"></script>
   
