--- a/time.html
+++ b/time.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>JS現在時刻by横茶横葉</title>
+  <title>現在時刻[Web版]by横茶横葉</title>
   <meta charset="UTF-8">
 </head>
 <body>
-<font size=7><h2 id="Clockvalue">Please wait a moment...</h2></font>
+<font size=7><h2 id="Clockvalue">JavaScript処理中です。お待ちください...</h2></font>
 
    <script src = "./timenow.js"></script>
   
