--- a/fastportal.html
+++ b/fastportal.html
@@ -26,7 +26,10 @@
           <p>ニコニコ動画メインページ↓</p>
 
   <a href="https://nicovideo.jp">ニコニコ動画</a>
+            <p>JavaScriptシンプル時計↓</p>
 
+  <a href="https://yokochayokoha.github.io/time">現在時刻表示</a>
+  
   <p>© 2023 YokochaYokoha All Rights Reserved. (YouTubeはGoogleLLCの商標又は登録商標です。)</p>
 </body>
 </html>
