--- a/time.html
+++ b/time.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="manifest" href="/manifest.json">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>現在時刻[Web版]by横茶横葉</title>
   <meta charset="UTF-8">
