--- a/time.html
+++ b/time.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-
+<script>
+navigator.serviceWorker.register('/sw.js');
+</script>
 <head>
   <link rel="manifest" href="/manifest.json">
   <meta name="viewport" content="width=device-width,initial-scale=1">
