--- a/fastportal.html
+++ b/fastportal.html
@@ -29,7 +29,13 @@
             <p>JavaScriptシンプル時計↓</p>
 
   <a href="https://yokochayokoha.github.io/time">現在時刻表示</a>
-  
+              <p>JavaScript日付表示(文章)↓</p>
+
+  <a href="https://yokochayokoha.github.io/datetoday">日付表示(文章)</a>
+              <p>JavaScript日付表示(シンプル)↓</p>
+
+  <a href="https://yokochayokoha.github.io/date">日付表示(シンプル)</a>
   <p>© 2023 YokochaYokoha All Rights Reserved. (YouTubeはGoogleLLCの商標又は登録商標です。)</p>
+   <a href="https://yokochayokoha.github.io/">横茶横葉</a>
 </body>
 </html>
