--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <p>Cafeアプリストアは↓コチラです!</p>
 
   <a href="https://sites.google.com/view/yokocafe/">コチラからどうぞ~</a>
+  <p>FastPortal-軽量のミニポータルサイトは↓コチラです!</p>
+  <a href="https://yokochayokoha.github.io/fastportal">コチラから!</a>
+  
   
 </body>
 </html>
