--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
   <a href="https://sites.google.com/view/yokocafe/">コチラからどうぞ~</a>
   <p>FastPortal-軽量のミニポータルサイトは↓コチラです!</p>
   <a href="https://yokochayokoha.github.io/fastportal">コチラから!</a>
+
+  <p>おすすめのオリジナルアプリ</p>
+  <a href="https://sites.google.com/view/yokocafe/coffee">
+  <img src="./banner2.jpg" alt="バナー画像">
+  </a>
+    <a href="https://sites.google.com/view/yokocafe/clite">
+  <img src="./banner1.jpg" alt="バナー画像">
+  </a>
   
   
 </body>
