--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
   <p>おすすめのオリジナルアプリ</p>
   <a href="https://sites.google.com/view/yokocafe/coffee">
-  <img src="./banner2.jpg" alt="バナー画像">
+  <img src="./banner2.jpg" alt="バナー画像" width="10%">
   </a>
     <a href="https://sites.google.com/view/yokocafe/clite">
-  <img src="./banner1.jpg" alt="バナー画像">
+  <img src="./banner1.jpg" alt="バナー画像" width="10%">
   </a>
   
   
