--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>横茶横葉のサイト</title>
   <meta charset="UTF-8">
 </head>
@@ -15,13 +16,16 @@
   <a href="https://sites.google.com/view/yokocafe/">コチラからどうぞ~</a>
   <p>FastPortal-軽量のミニポータルサイトは↓コチラです!</p>
   <a href="https://yokochayokoha.github.io/fastportal">コチラから!</a>
-
+<br><br>
   <p>おすすめのオリジナルアプリ</p>
+  <br>
+  
+  
   <a href="https://sites.google.com/view/yokocafe/coffee">
-  <img src="./banner2.jpg" alt="バナー画像" width="10%">
+  <img src="./banner2.jpg" alt="バナー画像" width="40%">
   </a>
     <a href="https://sites.google.com/view/yokocafe/clite">
-  <img src="./banner1.jpg" alt="バナー画像" width="10%">
+  <img src="./banner1.jpg" alt="バナー画像" width="40%">
   </a>
   
   
