--- a/index.html
+++ b/index.html
@@ -16,17 +16,24 @@
   <a href="https://sites.google.com/view/yokocafe/">コチラからどうぞ~</a>
   <p>FastPortal-軽量のミニポータルサイトは↓コチラです!</p>
   <a href="https://yokochayokoha.github.io/fastportal">コチラから!</a>
-<br><br>
+<br>
+  <br>
   <p>おすすめのオリジナルアプリ</p>
   <br>
   
   
   <a href="https://sites.google.com/view/yokocafe/coffee">
-  <img src="./banner2.jpg" alt="バナー画像" width="40%">
+  <img src="./banner2.jpg" alt="バナー画像" width="60%">
   </a>
     <a href="https://sites.google.com/view/yokocafe/clite">
-  <img src="./banner1.jpg" alt="バナー画像" width="40%">
+  <img src="./banner1.jpg" alt="バナー画像" width="60%">
   </a>
+
+  
+  <p></p>
+  <p></p>
+  <p><font color="green">©︎2023 横茶横葉 All Rights Reserved.</font></p>
+  
   
   
 </body>
