--- a/blicense.html
+++ b/blicense.html
@@ -15,10 +15,14 @@
   <p>公序良俗に反する使用--x</p>  
   <p>法律やその他法令に違反する使用(ここでは日本国の法令を適用)--x</p>  
   <p>その他横茶横葉が不正使用と判断した使用--x(この項目に関しては曖昧であるため、横茶横葉へ直接お問い合わせください!)</p>  
+  <p>アセットファイルの使用--x</p>
   <br>
   <h1>サマリー</h1>
-  
-  
+  <p>商用利用をせずに法令、利用規約、公序良俗に反しない使用であればソースコードのみ(画像などのアセットファイルを除く)をご自身の作品に活用できます!</p>  
+<h1>その他要件</h1>
+  <p>[しなくてもOK!(してくれると嬉しいです!)]使用したソースコードへのリンクを貼付する。(より多くの方の手助けになればと思い、要件に追加しました)</p>
+  <p>ソースコードの一部(製作者以外の方のコードを除く)のみを学習(新しいコードを知る)の目的でコピーしてご自身の製作するソフトウェアに活用する際は権利表記不要です!(でも書いてくれたら励みになります!)</p>
+  <p>基本的にゆる～く開発したい!と考えています。長々といろいろと書きましたが、一般常識の範疇(長々と書いた上記のいろんなこと)であれば、自由にソースコードを使ってもらってOKです!</p>
   
 
 
