--- a/blicense.html
+++ b/blicense.html
@@ -6,6 +6,10 @@
   <meta charset="UTF-8">
 </head>
 <body>
+<a href="https://yokochayokoha.github.io/blicense">
+<img src="https://github.com/Yokokiri-Cha/Resources1/blob/main/blicense.png?raw=true" width="20%">  
+</a> 
+  
   <h1>横茶横葉Bライセンスの詳細  改定日:2023/12/26(内容は予告なしに変更されることがあります。ご注意ください。)</h1>
 
    <p>Bライセンスの概要-禁止事項は以下の通りです。</p>  
