--- a/blicense.html
+++ b/blicense.html
@@ -6,12 +6,12 @@
   <meta charset="UTF-8">
 </head>
 <body>
+
+  
+  <h1>横茶横葉Bライセンスの詳細  改定日:2023/12/26(内容は予告なしに変更されることがあります。ご注意ください。)</h1>
 <a href="https://yokochayokoha.github.io/blicense">
 <img src="https://github.com/Yokokiri-Cha/Resources1/blob/main/blicense.png?raw=true" width="20%">  
 </a> 
-  
-  <h1>横茶横葉Bライセンスの詳細  改定日:2023/12/26(内容は予告なしに変更されることがあります。ご注意ください。)</h1>
-
    <p>Bライセンスの概要-禁止事項は以下の通りです。</p>  
   
   <p>商用利用--x</p>  
@@ -27,6 +27,7 @@
   <p>[しなくてもOK!(してくれると嬉しいです!)]使用したソースコードへのリンクを貼付する。(より多くの方の手助けになればと思い、要件に追加しました)</p>
   <p>ソースコードの一部(製作者以外の方のコードを除く)のみを学習(新しいコードを知る)の目的でコピーしてご自身の製作するソフトウェアに活用する際は権利表記不要です!(でも書いてくれたら励みになります!)</p>
   <p>基本的にゆる～く開発したい!と考えています。長々といろいろと書きましたが、一般常識の範疇(長々と書いた上記のいろんなこと)であれば、自由にソースコードを使ってもらってOKです!</p>
+  <p>何かご不明な点等ございましたら、横茶横葉にお気軽にご相談ください!SNSでも電子メールでもOKです!(気が付かないこともあるかもですが...)</p>
   
 
 
