--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <a href="https://sites.google.com/view/yokocafe/clite">
   <img src="./banner1.jpg" alt="バナー画像" width="60%">
   </a>
-
+  <p>横茶横葉の記事サイト!(設計中...)</p>
+  <a href="https://yokochayokoha.github.io/articles">コチラから!</a>
   
   <p></p>
   <p></p>
