--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  <h1>横茶横葉のサイト(現在製作中)</h1>
+  <h1>横茶横葉のサイト</h1>
 
+  <img src="./trademark.png" alt="バナー画像" width="30%">
+  
    <p>メインサイト(Googleサイト版)は↓コチラです!</p>
 
   <a href="https://sites.google.com/view/yokochayokoha/">コチラからどうぞ~</a>
@@ -17,20 +19,10 @@
   <p>FastPortal-軽量のミニポータルサイトは↓コチラです!</p>
   <a href="https://yokochayokoha.github.io/fastportal">コチラから!</a>
 <br>
-  <br>
-  <p>おすすめのオリジナルアプリ</p>
-  <br>
-  
-  
-  <a href="https://sites.google.com/view/yokocafe/coffee">
-  <img src="./banner2.jpg" alt="バナー画像" width="60%">
-  </a>
-    <a href="https://sites.google.com/view/yokocafe/clite">
-  <img src="./banner1.jpg" alt="バナー画像" width="60%">
-  </a>
+
   <p>横茶横葉の記事サイト!(設計中...)</p>
   <a href="https://yokochayokoha.github.io/articles">コチラから!</a>
-  
+
   <p></p>
   <p></p>
   <p><font color="green">©︎2023 横茶横葉 All Rights Reserved.</font></p>
