--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <a href="https://yokochayokoha.github.io/fastportal">コチラから!</a>
 <br>
 
-  <p>横茶横葉の記事サイト!(設計中...)</p>
+  <p>横茶横葉の記事サイト- 横茶横葉の記事なサイト</p>
   <a href="https://yokochayokoha.github.io/articles">コチラから!</a>
 
   <p></p>
   <p></p>
-  <p><font color="green">©︎2023 横茶横葉 All Rights Reserved.</font></p>
+  <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
   
   
   
