--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <p>FastPortal-軽量のミニポータルサイトは↓コチラです!</p>
   <a href="https://yokochayokoha.github.io/fastportal">コチラから!</a>
 <br>
+  <p>CoffeeSub - ブラウザーの中にブラウザー!Web版Coffeeブラウザーです!</p> 
+  <a href="https://yokochayokoha.github.io/CoffeeSub">コチラから!(横茶横葉のサイトのPWA版もここで設定可能!)</a>
+  <br>
 
   <p>横茶横葉の記事サイト- 横茶横葉の記事なサイト</p>
   <a href="https://yokochayokoha.github.io/articles">コチラから!</a>
