--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p>FastPortal-軽量のミニポータルサイトは↓コチラです!</p>
   <a href="https://yokochayokoha.github.io/fastportal">コチラから!</a>
 <br>
-  <p>CoffeeSub - ブラウザーの中にブラウザー!Web版Coffeeブラウザーです!</p> 
+  <p>CoffeeSub+横茶横葉のiOS用PWAアプリ</p> 
   <a href="https://yokochayokoha.github.io/CoffeeSub">コチラから!(横茶横葉のサイトのPWA版もここで設定可能!)</a>
   <br>
 
