--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <p>FastPortal-軽量のミニポータルサイトは↓コチラです!</p>
   <a href="https://yokochayokoha.github.io/fastportal">コチラから!</a>
 <br>
-  <p>CoffeeSub+横茶横葉のiOS用PWAアプリ</p> 
-  <a href="https://yokochayokoha.github.io/CoffeeSub">コチラから!(横茶横葉のサイトのPWA版もここで設定可能!)</a>
+  <p>CoffeeSub+iOS用PWAアプリ</p> 
+  <a href="https://yokochayokoha.github.io/CoffeeSub">コチラから!</a>
   <br>
 
   <p>横茶横葉の記事サイト- 横茶横葉の記事なサイト</p>
