--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <a href="https://yokochayokoha.github.io/articles">コチラから!</a>
   <br>
     <p>試験運用公開中-横茶横葉のスマホ忘備録-スマホ選び徹底ガイド!</p>
-  <a href="vhttps://sites.google.com/view/sm-boubiroku/%E3%83%9B%E3%83%BC%E3%83%A0">コチラから!<ベータ版 現在製作中...></a>
+  <a href="https://sites.google.com/view/sm-boubiroku/%E3%83%9B%E3%83%BC%E3%83%A0">コチラから!<ベータ版 現在製作中...></a>
 
   <p></p>
   <p></p>
