--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <a href="https://yokochayokoha.github.io/CoffeeSub">コチラから!</a>
   <br>
 
-  <p>横茶横葉の記事サイト- 横茶横葉の記事なサイト</p>
-  <a href="https://yokochayokoha.github.io/articles">コチラから!</a>
+  <p>横茶横葉の記事サイト- 横茶横葉の記事なサイト(更新終了)</p>
+
   <br>
     <p>試験運用公開中-横茶横葉のスマホ忘備録-スマホ選び徹底ガイド!</p>
   <a href="https://sites.google.com/view/sm-boubiroku/%E3%83%9B%E3%83%BC%E3%83%A0">コチラから!<ベータ版 現在製作中...></a>
