--- a/index.html
+++ b/index.html
@@ -8,29 +8,35 @@
 <body>
   <h1>横茶横葉のサイト</h1>
 
-  <img src="./trademark.png" alt="バナー画像" width="30%">
+  <img src="./trademark.png" alt="バナー画像" width="25%">
   
-   <p>メインサイト(Googleサイト版)は↓コチラです!</p>
+   
 
-  <a href="https://sites.google.com/view/yokochayokoha/">コチラからどうぞ~</a>
-    <p>Cafeアプリストアは↓コチラです!</p>
+  <a href="https://sites.google.com/view/yokochayokoha/"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(1).png?raw=true" alt="サイトへアクセス" width="50%"></a>
+ 
 
-  <a href="https://sites.google.com/view/yokocafe/">コチラからどうぞ~</a>
-  <p>FastPortal-軽量のミニポータルサイトは↓コチラです!</p>
-  <a href="https://yokochayokoha.github.io/fastportal">コチラから!</a>
-<br>
+  <a href="https://sites.google.com/view/yokocafe/"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(2).png?raw=true" alt="Cafeアプリストアへアクセス" width="50%"></a>
+
   <p>CoffeeSub+iOS用PWAアプリ</p> 
-  <a href="https://yokochayokoha.github.io/CoffeeSub">コチラから!</a>
+  <a href="https://yokochayokoha.github.io/CoffeeSub"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(4).png?raw=true" alt="CoffeeSubを使用" width="50%"></a>
   <br>
 
-  <p>横茶横葉の記事サイト- 横茶横葉の記事なサイト(更新終了)</p>
-
+<a href="https://twitter.com/yokocha_yokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(3).png?raw=true" alt="バナー画像" width="50%"></a>
   <br>
-    <p>試験運用公開中-横茶横葉のスマホ忘備録-スマホ選び徹底ガイド!</p>
-  <a href="https://sites.google.com/view/sm-boubiroku/%E3%83%9B%E3%83%BC%E3%83%A0">コチラから!<ベータ版 現在製作中...></a>
+  <a href="https://www.youtube.com/@yokocha.yokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(5).png?raw=true" alt="バナー画像" width="50%"></a>
 
   <p></p>
+  <h2>Who is YokochaYokoha?--横茶横葉って?</h2>
+  <br>
+  <p>横茶横葉(よこちゃよこは)はPCソフトウェア開発、スマホアプリ製作、Webサイト制作、ガジェット批評、電子機器修理、旅動画投稿、イラスト製作、ブログ執筆など、全然ジャンルの違うことに日々本気で挑戦しているどこにでもいそうなごくごく普通の人です!</p>
   <p></p>
+  <br>
+  <h2>進行中のプロジェクト</h2>
+  <p>CoffeeOSS6--PCブラウザーソフトウェア開発</p>
+  <p>横葉あとらすVer.5.0--スマホ地図アプリ</p>
+  <p>and...so on!</p>
+  <br>
+  <br>
   <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
   
   
