--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
 <body>
   <h1>横茶横葉のサイト</h1>
 
-  <img src="./trademark.png" alt="バナー画像" width="25%">
-  
+  <img src="./trademark.png" alt="バナー画像" width="20%">
+  <br>
+  <br>
    
-
+<p>旧メインサイト</p>
   <a href="https://sites.google.com/view/yokochayokoha/"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(1).png?raw=true" alt="サイトへアクセス" width="50%"></a>
- 
-
+  <br>
+  <p>YouTubeチャンネル</p>
+  <a href="https://www.youtube.com/@yokocha.yokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(5).png?raw=true" alt="バナー画像" width="50%"></a>
+<br>
+  <p>Cafeアプリストア</p>
   <a href="https://sites.google.com/view/yokocafe/"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(2).png?raw=true" alt="Cafeアプリストアへアクセス" width="50%"></a>
-
+<br>
   <p>CoffeeSub+iOS用PWAアプリ</p> 
   <a href="https://yokochayokoha.github.io/CoffeeSub"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(4).png?raw=true" alt="CoffeeSubを使用" width="50%"></a>
   <br>
-
+<p>X(Twitter)--休止中。重要なお知らせのみです!</p>
 <a href="https://twitter.com/yokocha_yokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(3).png?raw=true" alt="バナー画像" width="50%"></a>
   <br>
-  <a href="https://www.youtube.com/@yokocha.yokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(5).png?raw=true" alt="バナー画像" width="50%"></a>
-
-  <p></p>
+ 
+<br>
+  <p>Appendix:</p>
   <h2>Who is YokochaYokoha?--横茶横葉って?</h2>
   <br>
   <p>横茶横葉(よこちゃよこは)はPCソフトウェア開発、スマホアプリ製作、Webサイト制作、ガジェット批評、電子機器修理、旅動画投稿、イラスト製作、ブログ執筆など、全然ジャンルの違うことに日々本気で挑戦しているどこにでもいそうなごくごく普通の人です!</p>
