--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <p>横葉あとらすVer.5.0--スマホ地図アプリ</p>
   <p>and...so on!</p>
   <br>
+  <h2>Why your name is "YokochaYokoha"? --なぜ「横茶横葉」という名前にしたの?</h2>
+  <p>....Coming soon!</p>
   <br>
   <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
   
