--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <p>....Coming soon!</p>
   <br>
   <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
+  <p>Drawings:横井陽菜デフォルメ/茶町瑠璃/横茶横葉の手/Coffeeロゴマーク/横井陽菜</p>
   
   
   
