--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
   <br>
   <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
   <p>Drawings:横井陽菜デフォルメ/茶町瑠璃/横茶横葉の手/Coffeeロゴマーク/横井陽菜</p>
+  <p>権利表記:YouTube™はGoogle LLCの商標または登録商標です。</p>
   
   
   
