--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 <p>X(Twitter)--休止中。重要なお知らせのみです!</p>
 <a href="https://twitter.com/yokocha_yokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(3).png?raw=true" alt="バナー画像" width="50%"></a>
   <br>
- 
+ <p>GitHub(旧アカウント)</p>
+<a href="https://github.com/Yokokiri-Cha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(6).png?raw=true" alt="バナー画像" width="50%"></a>
+  <br>
 <br>
   <p>Appendix:</p>
   <h2>Who is YokochaYokoha?--横茶横葉って?</h2>
@@ -44,7 +46,7 @@
   <p>....Coming soon!</p>
   <br>
   <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
-  <p>Drawings:横井陽菜デフォルメ/茶町瑠璃/横茶横葉の手/Coffeeロゴマーク/横井陽菜</p>
+  <p>Drawings:横井陽菜デフォルメ/茶町瑠璃/横茶横葉の手/Coffeeロゴマーク/横井陽菜/葉摘優</p>
   <p>権利表記:YouTubeはGoogle LLCの商標または登録商標です。</p>
   
   
