--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
   <img src="./trademark.png" alt="バナー画像" width="20%">
   <br>
-      <canvas id="hyoujimado"></canvas>
-  <p>3Dモデリングに挑戦中!</p>
   <br>
    
 <p>旧メインサイト</p>
@@ -53,6 +51,12 @@
   <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
   <p>Drawings:横井陽菜デフォルメ/茶町瑠璃/横茶横葉の手/Coffeeロゴマーク/横井陽菜/葉摘優</p>
   <p>権利表記:YouTubeはGoogle LLCの商標または登録商標です。</p>
+
+<br>
+  <br>
+  <p>Appendixその2:</p>
+        <canvas id="hyoujimado" width="100" height="100"></canvas>
+  <p>3Dモデリングにも現在挑戦中です!</p>
   
       <script>
      
