--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
   <p>Appendixその2:</p>
         <canvas id="hyoujimado" width="100" height="100"></canvas>
   <p>3Dモデリングにも現在挑戦中です!</p>
+  <p>Powered by Three.js Thanks!</p>
   
       <script>
      
