--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <br>
   <br>
   <p>Appendixその2:</p>
-        <canvas id="hyoujimado" width="100" height="100"></canvas>
-  <p>3Dモデリングにも現在挑戦中です!</p>
+        <canvas id="hyoujimado" width="20" height="20"></canvas>
+  <p>3Dモデリングにも現在挑戦中です!(2本指で移動できます)</p>
   <p>Powered by Three.js Thanks!</p>
   
       <script>
