--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <br>
    
 <p>旧メインサイト</p>
-  <a href="https://sites.google.com/view/yokochayokoha/"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(1).png?raw=true" alt="サイトへアクセス" width="50%"></a>
+  <a href="https://sites.google.com/view/yokochayokoha/"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner.png?raw=true" alt="サイトへアクセス" width="50%"></a>
   <br>
   <p>YouTubeチャンネル</p>
   <a href="https://www.youtube.com/@yokocha.yokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(5).png?raw=true" alt="バナー画像" width="50%"></a>
