--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
   <p>Appendix:</p>
   <h2>Who is YokochaYokoha?--横茶横葉って?</h2>
   <br>
-  <p>横茶横葉(よこちゃよこは)はPCソフトウェア開発、スマホアプリ製作、Webサイト制作、ガジェット批評、電子機器修理、旅動画投稿、イラスト製作、ブログ執筆など、全然ジャンルの違うことに日々本気で挑戦しているどこにでもいそうなごくごく普通の人です!</p>
+  <p>横茶横葉(よこちゃよこは)はPCソフトウェア開発、スマホアプリ製作、Webサイト制作、ガジェット批評、オブジェクトモデリング、旅動画投稿、イラスト製作、ブログ執筆など、全然ジャンルの違うことに日々本気で挑戦しているどこにでもいそうなごくごく普通の人です!</p>
   <p></p>
   <br>
   <h2>進行中のプロジェクト</h2>
-  <p>CoffeeOSS6--PCブラウザーソフトウェア開発</p>
+  <p>Coffee for PC--PCブラウザーソフトウェア開発</p>
   <p>横葉あとらすVer.5.0--スマホ地図アプリ</p>
   <p>and...so on!</p>
   <br>
@@ -46,7 +46,7 @@
   <p>....Coming soon!</p>
   <br>
   <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
-  <p>Drawings:横井陽菜デフォルメ/茶町瑠璃/横茶横葉の手/Coffeeロゴマーク/横井陽菜/葉摘優</p>
+  <p>Drawings:横井陽菜新ビジュアル/茶町瑠璃/横茶横葉の手/Coffeeロゴマーク/横井陽菜/葉摘優</p>
   <p>権利表記:YouTubeはGoogle LLCの商標または登録商標です。</p>
   <br>
 <p>期間限定コンテンツの掲載は終了しました</p>
