--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
   <p>横茶横葉(よこちゃよこは)はPCソフトウェア開発、スマホアプリ製作、Webサイト制作、ガジェット批評、オブジェクトモデリング、旅動画投稿、イラスト製作、ブログ執筆など、全然ジャンルの違うことに日々本気で挑戦しているどこにでもいそうなごくごく普通の人です!</p>
   <p></p>
   <br>
+  <h2>What is this site?--このサイトは何ですか?</h2>
+  <br>
+  <p>このサイトは個人製作のホームページです! SNSとかでも良かったのですが、私は小さな頃から自分のサイトを持つことを夢見ていたのでここに立てる事にしました!(夢が叶いました!)</p>
+  <p>普段は特に何もありませんが、たまに何かします! 気が向いたときはぜひアクセスしてみてくださいね! お待ちしてます♪</p>
   <h2>進行中のプロジェクト</h2>
   <p>Coffee for PC--PCブラウザーソフトウェア開発</p>
   <p>横葉あとらすVer.5.0--スマホ地図アプリ</p>
+  <p>何か大きなプロジェクト--内容未定</p>
   <p>and...so on!</p>
   <br>
   <h2>Why your name is "YokochaYokoha"? --なぜ「横茶横葉」という名前にしたの?</h2>
