--- a/readme.html
+++ b/readme.html
@@ -7,6 +7,8 @@
    </head>
 <body>
   <img src="./trademark.png" alt="バナー画像" width="20%">
+  <br>
+  <p>※このページの内容は2024年5月31日午後22時11分現在の利用規約を転記したものです。今後はこのページの利用規約が適用されます。</p>
 <pre>
   サイトオーナーの横茶横葉より:私は"ゆるく"やりたいのであまりこういった制限を設けたくないのですが、一応何かあると怖いので形式的に用意してみました。書いてあることは意外と一般的な内容なのではないかと思いますので、普通に利用していれば特に問題はないと思います。もし不安でしたらお読み下さいね♪。難しいように書いてしまったようなぁ気がしますが「変な使い方はしないし、自分の責任で常識的な利用をするから大丈夫っ!」という方は読まなくてもよさそうな内容です。なのであんまり難しく考えなくてもいいですよ~♪。
 
