--- a/index.html
+++ b/index.html
@@ -24,34 +24,16 @@
   <p>CoffeeSub+iOS用PWAアプリ</p> 
   <a href="https://yokochayokoha.github.io/CoffeeSub"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(4).png?raw=true" alt="CoffeeSubを使用" width="50%"></a>
   <br>
+    <p>雑記帳(Blogger)</p> 
+  <a href="https://yokochayokoha.blogspot.com"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner7.png?raw=true" alt="Bloggerへ移動" width="50%"></a>
+  <br>
 <p>X(Twitter)--休止中。重要なお知らせのみです!</p>
 <a href="https://twitter.com/yokocha_yokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(3).png?raw=true" alt="バナー画像" width="50%"></a>
   <br>
- <p>GitHub(旧アカウント)</p>
-<a href="https://github.com/Yokokiri-Cha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(6).png?raw=true" alt="バナー画像" width="50%"></a>
+ <p>GitHub(新アカウント)</p>
+<a href="https://github.com/YokochaYokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(6).png?raw=true" alt="バナー画像" width="50%"></a>
   <br>
 <br>
-  <p>Appendix:</p>
-  <h2>Who is YokochaYokoha?--横茶横葉って?</h2>
-  <br>
-  <p>横茶横葉(よこちゃよこは)はPCソフトウェア開発、スマホアプリ製作、Webサイト制作、ガジェット批評、オブジェクトモデリング、旅動画投稿、イラスト製作、ブログ執筆など、全然ジャンルの違うことに日々本気で挑戦しているどこにでもいそうなごくごく普通の人です!</p>
-  <p></p>
-  <br>
-  <h2>What is this site?--このサイトは何ですか?</h2>
-  <br>
-  <p>このサイトは個人製作のホームページです! SNSとかでも良かったのですが、私は小さな頃から自分のサイトを持つことを夢見ていたのでここに立てる事にしました!(夢が叶いました!)</p>
-  <p>普段は特に何もありませんが、たまに何かします! 気が向いたときはぜひアクセスしてみてくださいね! お待ちしてます♪</p>
-  <h2>進行中のプロジェクト</h2>
-  <p>Coffee for PC--PCブラウザーソフトウェア開発</p>
-  <p>横葉あとらすVer.5.0--スマホ地図アプリ</p>
-  <p>何か大きなプロジェクト--内容未定</p>
-  <p>and...so on!</p>
-  <br>
-  <h2>Why your name is "YokochaYokoha"? --なぜ「横茶横葉」という名前にしたの?</h2>
-  <p>....Coming soon!</p>
-  <br>
-  <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
-  <p>Drawings:横井陽菜新ビジュアル/茶町瑠璃/横茶横葉の手/Coffeeロゴマーク/横井陽菜/葉摘優</p>
   <p>権利表記:YouTubeはGoogle LLCの商標または登録商標です。</p>
   <br>
 <p>期間限定コンテンツの掲載は終了しました</p>
