--- a/fastportal.html
+++ b/fastportal.html
@@ -16,9 +16,7 @@
       <p>DuckDuckGo検索↓</p>
 
   <a href="https://duckduckgo.com">DuckDuckGO</a>
-   <p>Microsoft Bing検索↓</p>
 
-  <a href="https://www.bing.com">Microsoft Bing</a>
         <p>YouTubeメインページ↓</p>
 
   <a href="https://www.youtube.com">YouTube</a>
@@ -35,7 +33,10 @@
               <p>JavaScript日付表示(シンプル)↓</p>
 
   <a href="https://yokochayokoha.github.io/date">日付表示(シンプル)</a>
-  <p>© 2024 YokochaYokoha All Rights Reserved. (YouTubeはGoogleLLCの商標又は登録商標です。)</p>
+  <p>© 2024 YokochaYokoha</p>
+  <p>Google,YouTube,YouTubeMusicはGoogle LLCの商標または登録商標です。</p>
+  <p>ニコニコ動画は株式会社ドワンゴの商標または登録商標です。</p>
+    <p>DuckDuckGoはDuck Duck Go, Inc.の商標または登録商標です。</p>
   
 </body>
 </html>
