--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <p>CoffeeSub+iOS用PWAアプリ</p> 
   <a href="https://yokochayokoha.github.io/CoffeeSub"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(4).png?raw=true" alt="CoffeeSubを使用" width="50%"></a>
   <br>
-    <p>雑記帳(Blogger)</p> 
-  <a href="https://yokochayokoha.blogspot.com"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner7.png?raw=true" alt="Bloggerへ移動" width="50%"></a>
+    <p>雑記帳</p> 
+  <a href="https://yokochayokoha.blogspot.com"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner7.png?raw=true" alt="移動" width="50%"></a>
   <br>
 <p>X(Twitter)--休止中。重要なお知らせのみです!</p>
 <a href="https://twitter.com/yokocha_yokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(3).png?raw=true" alt="バナー画像" width="50%"></a>
@@ -34,6 +34,7 @@
 <a href="https://github.com/YokochaYokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(6).png?raw=true" alt="バナー画像" width="50%"></a>
   <br>
 <br>
+    <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
   <p>権利表記:YouTubeはGoogle LLCの商標または登録商標です。</p>
   <br>
 <p>期間限定コンテンツの掲載は終了しました</p>
