--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <img src="./trademark.png" alt="バナー画像" width="20%">
   <br>
+  <p>現在、サイトの<em>改装工事中</em>です。リニューアルまで一部のコンテンツが閲覧できない場合があります。完了までお待ちください!</p>
   <br>
    
 <p>旧メインサイト</p>
