--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <br>
   <p>現在、サイトの<em>改装工事中</em>です。リニューアルまで一部のコンテンツが閲覧できない場合があります。完了までお待ちください!</p>
   <br>
-   
+
 <p>旧メインサイト</p>
   <a href="https://sites.google.com/view/yokochayokoha/"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner.png?raw=true" alt="サイトへアクセス" width="50%"></a>
   <br>
@@ -35,6 +35,10 @@
 <a href="https://github.com/YokochaYokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(6).png?raw=true" alt="バナー画像" width="50%"></a>
   <br>
 <br>
+    <p>Latest News from YokochaYokoha!</p>
+<br>
+  <a class="twitter-timeline" data-lang="ja" data-theme="dark" href="https://twitter.com/yokocha_yokoha?ref_src=twsrc%5Etfw">Tweets by yokocha_yokoha</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <br>
     <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
   <p>権利表記:YouTubeはGoogle LLCの商標または登録商標です。</p>
   <br>
