--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
   <br>
   <p>現在、サイトの<em>改装工事中</em>です。リニューアルまで一部のコンテンツが閲覧できない場合があります。完了までお待ちください!</p>
   <br>
-
-<p>旧メインサイト</p>
+<p>Recommended!</p>
+  <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">シンプルQRコード生成サイト、公開中!<br>どなたでも無料+広告なしでご利用いただけます!<br>是非!<a href="https://t.co/LfR5NfwWTj">https://t.co/LfR5NfwWTj</a> <a href="https://t.co/WCwvn4c6bx">pic.twitter.com/WCwvn4c6bx</a></p>&mdash; 横茶横葉【アプリ&amp;ソフト、イラスト(練習中)etc.】 (@yokocha_yokoha) <a href="https://twitter.com/yokocha_yokoha/status/1806497294495392031?ref_src=twsrc%5Etfw">June 28, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<br>
+  <p>旧メインサイト</p>
   <a href="https://sites.google.com/view/yokochayokoha/"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner.png?raw=true" alt="サイトへアクセス" width="50%"></a>
   <br>
   <p>YouTubeチャンネル</p>
