--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <br>
     <p>Latest News from YokochaYokoha!</p>
 <br>
-  <a class="twitter-timeline" data-lang="ja" data-theme="dark" href="https://twitter.com/yokocha_yokoha?ref_src=twsrc%5Etfw">Tweets by yokocha_yokoha</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <a class="twitter-timeline" data-lang="ja" data-theme="dark" href="https://x.com/yokocha_yokoha?ref_src=twsrc%5Etfw">Tweets by yokocha_yokoha</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <br>
     <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
   <p>権利表記:YouTubeはGoogle LLCの商標または登録商標です。</p>
