--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <br>
   <p>現在、サイトの<em>改装工事中</em>です。リニューアルまで一部のコンテンツが閲覧できない場合があります。完了までお待ちください!</p>
   <br>
-<p>Recommended!</p>
+<p>新着情報</p>
+  <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="ja" dir="ltr">Coffee for Androidの新規DynamicUA配信しました! <a href="https://t.co/W36lY3CMY1">pic.twitter.com/W36lY3CMY1</a></p>&mdash; 横茶横葉【アプリ&amp;ソフト、イラスト(練習中)etc.】 (@yokocha_yokoha) <a href="https://twitter.com/yokocha_yokoha/status/1806619409110499745?ref_src=twsrc%5Etfw">2024年6月28日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">シンプルQRコード生成サイト、公開中!<br>どなたでも無料+広告なしでご利用いただけます!<br>是非!<a href="https://t.co/LfR5NfwWTj">https://t.co/LfR5NfwWTj</a> <a href="https://t.co/WCwvn4c6bx">pic.twitter.com/WCwvn4c6bx</a></p>&mdash; 横茶横葉【アプリ&amp;ソフト、イラスト(練習中)etc.】 (@yokocha_yokoha) <a href="https://twitter.com/yokocha_yokoha/status/1806497294495392031?ref_src=twsrc%5Etfw">June 28, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
   <p>旧メインサイト</p>
@@ -37,10 +38,6 @@
 <a href="https://github.com/YokochaYokoha"><img src="https://github.com/YokochaYokoha/YokochaYokoha/blob/main/banner%20(6).png?raw=true" alt="バナー画像" width="50%"></a>
   <br>
 <br>
-    <p>Latest News from YokochaYokoha!</p>
-<br>
-  <a class="twitter-timeline" data-lang="ja" data-theme="dark" href="https://x.com/yokocha_yokoha?ref_src=twsrc%5Etfw">Tweets by yokocha_yokoha</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  <br>
     <p><font color="green">©︎2023-2024 横茶横葉 All Rights Reserved.</font></p>
   <p>権利表記:YouTubeはGoogle LLCの商標または登録商標です。</p>
   <br>
