--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <br>
   <p>現在、サイトの<em>改装工事中</em>です。リニューアルまで一部のコンテンツが閲覧できない場合があります。完了までお待ちください!</p>
   <br>
-<p>新着情報</p>
+<p>新着情報 - 3件(詳細は<a href="https://twitter.com/YokochaYokoha">報連相アカウントへ!</a>)</p>
+  <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="en" dir="ltr">Active Projects --July 2024<br>------------------------------<br>·Coffee for PC(C4P) Ver.3.0<br>·Coffee for Android Updates<br>·Yokoha Atlas Update<br>·Renew the main site<br>·C4P Extensions<br>------------------------------<br>And so on!</p>&mdash; 横茶横葉 報連相 (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1808275088581841341?ref_src=twsrc%5Etfw">2024年7月2日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="ja" dir="ltr">Coffee for Androidの新規DynamicUA配信しました! <a href="https://t.co/W36lY3CMY1">pic.twitter.com/W36lY3CMY1</a></p>&mdash; 横茶横葉【アプリ&amp;ソフト、イラスト(練習中)etc.】 (@yokocha_yokoha) <a href="https://twitter.com/yokocha_yokoha/status/1806619409110499745?ref_src=twsrc%5Etfw">2024年6月28日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">シンプルQRコード生成サイト、公開中!<br>どなたでも無料+広告なしでご利用いただけます!<br>是非!<a href="https://t.co/LfR5NfwWTj">https://t.co/LfR5NfwWTj</a> <a href="https://t.co/WCwvn4c6bx">pic.twitter.com/WCwvn4c6bx</a></p>&mdash; 横茶横葉【アプリ&amp;ソフト、イラスト(練習中)etc.】 (@yokocha_yokoha) <a href="https://twitter.com/yokocha_yokoha/status/1806497294495392031?ref_src=twsrc%5Etfw">June 28, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <br>
