--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!--CSSを本気で勉強しながら作りました!-->
     <!--GithubもDevtoolsも、便利ですよね!(ベンリネ-!)   横茶横葉隠しメッセージ終わり-->
 </head>
+    <!--依存関係(時刻表示)-->
+    <script src = "./timenow.js"></script>
 <!--ここから下がCSS(複数あると個人的に管理に困るので単一ファイルにしました)-->
 <style>
     /*C#に慣れているのでC#風に入力させてくださいね!*/
@@ -162,7 +164,7 @@ margin: 20px auto;
             <div class="imgcontainer"><img src="3.png" alt="ヘッダーカールセル画像"></div>
             </div>
         </div>
-        <div class="timenow" id="time"></div>
+        <div class="timenow" id="Clockvalue"></div>
         <!--ここまでsection1-->
 </header>
 <!--ここからsection2-->
