--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ body
     padding: 0;
     background-color: #EFFFDF;
     color: #333;
+    cursor: url(trademark.png)2,auto;
 }
 /*ここからsection1(ヘッダー)*/
 header
@@ -34,7 +35,7 @@ header
 .carouselkari
 {
     width: 100%;
-    height: 100%;
+    height: 80%;
     position: relative;
 }
 .carouselimgs
@@ -148,6 +149,45 @@ max-width: 900px;
 /*マージンを縦20px横自動で指定*/
 margin: 20px auto;
 }
+    .E
+{
+padding: 20px;
+background-color:mediumaquamarine;
+/*Coffeeブラウザー風丸角表示(card)*/
+border-radius: 15px;
+/*影(お洒落)*/
+box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
+/*はみ出し阻止*/
+max-width: 900px;
+/*マージンを縦20px横自動で指定*/
+margin: 20px auto;
+}
+    .F
+{
+padding: 20px;
+background-color:teal;
+/*Coffeeブラウザー風丸角表示(card)*/
+border-radius: 15px;
+/*影(お洒落)*/
+box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
+/*はみ出し阻止*/
+max-width: 900px;
+/*マージンを縦20px横自動で指定*/
+margin: 20px auto;
+}
+    .G
+{
+padding: 20px;
+background-color:white;
+/*Coffeeブラウザー風丸角表示(card)*/
+border-radius: 15px;
+/*影(お洒落)*/
+box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
+/*はみ出し阻止*/
+max-width: 900px;
+/*マージンを縦20px横自動で指定*/
+margin: 20px auto;
+}
 </style>
 <body>
     <header>
@@ -181,11 +221,29 @@ margin: 20px auto;
           <h2>現在大幅なリニューアル作業を行っています。一部機能が正常に動作しない場合があります。</h2>
             <h3>新着情報 - 3件(詳細は<a href="https://twitter.com/YokochaYokoha">報連相アカウントへ!</a>)</h3>
             <noscript><h1><font color="red">Javascriptが無効です。一部コンテンツは表示できません。<br>Coffeeブラウザーの場合は快適読書モードまたは緊急データセーバーをオフにしてください。</font></h1></noscript>
+            <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="ja" dir="ltr">サイト更新作業全工程の1/3が完了しました。完了までお待ち下さい。<br> The site update work is one-third complete. Please wait until it is complete.</p>&mdash; 横茶横葉 報連相 -Y.Yokoha Reports&amp;Contacts (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1808995479629484166?ref_src=twsrc%5Etfw">2024年7月4日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="ja" dir="ltr">メインサイトは現在長期メンテナンス中です。完了までお待ち下さい。<br><br> The main site is currently under maintenance. Please wait until the maintenance is completed.</p>&mdash; 横茶横葉 報連相 (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1808450071824064623?ref_src=twsrc%5Etfw">2024年7月3日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="en" dir="ltr">Active Projects --July 2024<br>------------------------------<br>·Coffee for PC(C4P) Ver.3.0<br>·Coffee for Android Updates<br>·Yokoha Atlas Update<br>·Renew the main site<br>·C4P Extensions<br>------------------------------<br>And so on!</p>&mdash; 横茶横葉 報連相 (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1808275088581841341?ref_src=twsrc%5Etfw">2024年7月2日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="ja" dir="ltr">Coffee for Androidの新規DynamicUA配信しました! <a href="https://t.co/W36lY3CMY1">pic.twitter.com/W36lY3CMY1</a></p>&mdash; 横茶横葉【アプリ&amp;ソフト、イラスト(練習中)etc.】 (@yokocha_yokoha) <a href="https://twitter.com/yokocha_yokoha/status/1806619409110499745?ref_src=twsrc%5Etfw">2024年6月28日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
+        <div class="G">
+            <h3>横茶横葉作のイラスト</h3>
+            <div class="align2>
+                <img src="trademark.png" width="15%" height="15%">
+            </div>
+            <p>掲載準備中</p>
+        </div>
+<div class="E">
+    <h3>横茶横葉の楽曲(最近は作っていません....)</h3>
+    <p>"ドライブ" from 横茶横葉Instrumentals -試聴↓</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/aHgNG2a1vjc?si=G7wEbMneRrnJK7RB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 
+<div class="F">
+    <h3>YouTubeの動画</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/jQcipoGEiO4?si=ysZVwCzojZANMfxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Ps2ftSw4WMc?si=5ZYIyAhsMh411hi5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+        
         <div class="C">
 <h3>各種サービス一覧</h3>
 <br>
