--- a/index.html
+++ b/index.html
@@ -223,11 +223,17 @@ margin: 20px auto;
             <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="en" dir="ltr">Active Projects --July 2024<br>------------------------------<br>·Coffee for PC(C4P) Ver.3.0<br>·Coffee for Android Updates<br>·Yokoha Atlas Update<br>·Renew the main site<br>·C4P Extensions<br>------------------------------<br>And so on!</p>&mdash; 横茶横葉 報連相 (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1808275088581841341?ref_src=twsrc%5Etfw">2024年7月2日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         <div class="G">
-            <h3>横茶横葉作のイラスト</h3>
-            <div class="align2>
-                <img src="trademark.png" width="15%" height="15%">
+            <h3>横茶横葉からのお知らせ</h3>
+        <div class="caroucelkari">
+
+            <div class="carouselimgs">
+
+            <div class="imgcontainer"><img src="bs0.png" alt="ヘッダーカールセル画像"></div>
+            <div class="imgcontainer"><a href="https://sites.google.com/view/coffeebr"><img src="bs1.png" alt="ヘッダーカールセル画像"></a></div>
+            <div class="imgcontainer"><a href="https://github.com/YokochaYokoha/Coffee_for_PC?tab=readme-ov-file#whats-new"><img src="bs2.png" alt="ヘッダーカールセル画像"></a></div>
             </div>
-            <p>掲載準備中</p>
+        </div>
+            
         </div>
 <div class="E">
     <h3>横茶横葉の楽曲(最近は作っていません....)</h3>
