--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@ margin: 20px auto;
         <div class="caroucelkari">
 
             <div class="carouselimgs">
-
-            <div class="imgcontainer"><img src="bs0.png" alt="ヘッダーカールセル画像"></div>
-            <div class="imgcontainer"><a href="https://sites.google.com/view/coffeebr"><img src="bs1.png" alt="ヘッダーカールセル画像"></a></div>
-            <div class="imgcontainer"><a href="https://github.com/YokochaYokoha/Coffee_for_PC?tab=readme-ov-file#whats-new"><img src="bs2.png" alt="ヘッダーカールセル画像"></a></div>
+            <div class="imgcontainer"><img src="1.png" alt="ヘッダーカールセル画像"></div>
+            <div class="imgcontainer"><img src="2.png" alt="ヘッダーカールセル画像"></div>
+            <div class="imgcontainer"><img src="3.png" alt="ヘッダーカールセル画像"></div> 
             </div>
+            
         </div>
         <div class="timenow" id="Clockvalue"></div>
         <!--ここまでsection1-->
