--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@ max-width: 900px;
 /*マージンを縦20px横自動で指定*/
 margin: 20px auto;
 }
+    .carouselkari2
+{
+    width: 900px;
+    height: 80%;
+    position: relative;
+}
 </style>
 <body>
     <header>
@@ -223,7 +229,7 @@ margin: 20px auto;
             <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="en" dir="ltr">Active Projects --July 2024<br>------------------------------<br>·Coffee for PC(C4P) Ver.3.0<br>·Coffee for Android Updates<br>·Yokoha Atlas Update<br>·Renew the main site<br>·C4P Extensions<br>------------------------------<br>And so on!</p>&mdash; 横茶横葉 報連相 (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1808275088581841341?ref_src=twsrc%5Etfw">2024年7月2日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
             <h3>横茶横葉からのお知らせ</h3>
-        <div class="caroucelkari">
+        <div class="caroucelkari2">
 
             <div class="carouselimgs">
 
