--- a/index.html
+++ b/index.html
@@ -190,9 +190,10 @@ margin: 20px auto;
 }
     .carouselkari2
 {
-    width: 900px;
+    width: 100%;
     height: 80%;
     position: relative;
+    overflow: hidden;
 }
 </style>
 <body>
