--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@ box-shadow: 0px 4px 6px rgba(0,0,0,0.1);
 max-width: 900px;
 /*マージンを縦20px横自動で指定*/
 margin: 20px auto;
+       overflow: hidden;
 }
     .carouselkari2
 {
@@ -230,6 +231,7 @@ margin: 20px auto;
             <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="en" dir="ltr">Active Projects --July 2024<br>------------------------------<br>·Coffee for PC(C4P) Ver.3.0<br>·Coffee for Android Updates<br>·Yokoha Atlas Update<br>·Renew the main site<br>·C4P Extensions<br>------------------------------<br>And so on!</p>&mdash; 横茶横葉 報連相 (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1808275088581841341?ref_src=twsrc%5Etfw">2024年7月2日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
             <h3>横茶横葉からのお知らせ</h3>
+        <div class="G">
         <div class="caroucelkari2">
 
             <div class="carouselimgs">
@@ -238,6 +240,7 @@ margin: 20px auto;
             <div class="imgcontainer"><a href="https://sites.google.com/view/coffeebr"><img src="bs1.png" alt="ヘッダーカールセル画像"></a></div>
             <div class="imgcontainer"><a href="https://github.com/YokochaYokoha/Coffee_for_PC?tab=readme-ov-file#whats-new"><img src="bs2.png" alt="ヘッダーカールセル画像"></a></div>
             </div>
+        </div>
         </div>
             
 
