--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ margin: 20px auto;
         </div>
 
         <div class="G">
-                        <h3>横茶横葉からのお知らせ</h3>
+                        <h3>横茶横葉からのお知らせ 2024年7月版(初夏)</h3>
         <div class="caroucelkari2">
 
             <div class="carouselimgs">
