--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@ margin: 20px auto;
           <h2>現在大幅なリニューアル作業を行っています。一部機能が正常に動作しない場合があります。</h2>
             <h3>新着情報 - 3件(詳細は<a href="https://twitter.com/YokochaYokoha">報連相アカウントへ!</a>)</h3>
             <noscript><h1><font color="red">Javascriptが無効です。一部コンテンツは表示できません。<br>Coffeeブラウザーの場合は快適読書モードまたは緊急データセーバーをオフにしてください。</font></h1></noscript>
+            <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="ja" dir="ltr">現在、Coffee(スマホ版,Ver.18.0)とCoffee for PC Ver.3.0にてGoogle PlayプロテクトとWindows Defenderにマルウェアとして誤検知され、インストールが出来なくなっている不具合が確認されています。現在解決方法を模索中です。ご迷惑をお掛け致します。<br>(オートバージョンアップ受付は一時停止します)</p>&mdash; 横茶横葉 報連相 -Y.Yokoha Reports&amp;Contacts (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1815381170634527202?ref_src=twsrc%5Etfw">2024年7月22日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="ja" dir="ltr">サイト更新作業全工程の1/3が完了しました。完了までお待ち下さい。<br> The site update work is one-third complete. Please wait until it is complete.</p>&mdash; 横茶横葉 報連相 -Y.Yokoha Reports&amp;Contacts (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1808995479629484166?ref_src=twsrc%5Etfw">2024年7月4日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="ja" dir="ltr">メインサイトは現在長期メンテナンス中です。完了までお待ち下さい。<br><br> The main site is currently under maintenance. Please wait until the maintenance is completed.</p>&mdash; 横茶横葉 報連相 (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1808450071824064623?ref_src=twsrc%5Etfw">2024年7月3日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <blockquote class="twitter-tweet" data-lang="ja" data-theme="dark"><p lang="en" dir="ltr">Active Projects --July 2024<br>------------------------------<br>·Coffee for PC(C4P) Ver.3.0<br>·Coffee for Android Updates<br>·Yokoha Atlas Update<br>·Renew the main site<br>·C4P Extensions<br>------------------------------<br>And so on!</p>&mdash; 横茶横葉 報連相 (@YokochaYokoha) <a href="https://twitter.com/YokochaYokoha/status/1808275088581841341?ref_src=twsrc%5Etfw">2024年7月2日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+       </div>
 
         <div class="G">
                         <h3>横茶横葉からのお知らせ 2024年7月版(初夏)</h3>
